<resources>
    <string name="app_name">بنك الدم</string>
    <string name="takhati">تخطى</string>
    <string name="phonenumber">الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="rememberme">تزكرنى</string>
    <string name="forgetpassword">هل نسيت كلمة المرور</string>
    <string name="login">دخول</string>
    <string name="signin">انشاء حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الالكترونى</string>
    <string name="birthdate">تاريخ الميلاد</string>
    <string name="blodtype">فصيلة الدم</string>
    <string name="confirmpassword">تاكيد كلمة المرور</string>
    <string name="sign">تسجيل</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="files">المقالات</string>
    <string name="requests">طلبات التبرع</string>
    <string name="information">معلوماتى</string>
    <string name="notificationsetting">اعدادات الاشعارات</string>
    <string name="favorites">المفضله</string>
    <string name="main">الرئيسيه</string>
    <string name="usiginfo">تعليمات الاستخدام</string>
    <string name="report">ابلاغ</string>
    <string name="callus">تواصل معنا</string>
    <string name="about">عن التطبيق</string>
    <string name="reviewapp">تقييم التطبيق على جوجل استور</string>
    <string name="signup">تسجيل الخروج</string>
    <string name="savechildren">الوقاية من الامراض</string>
    <string name="send">ارسال</string>
    <string name="message">نص الرساله.....</string>
    <string name="ourphone">الجوال:01245899000</string>
    <string name="ouremail">البريد الالكترونى:name@name.com</string>
    <string name="messagetitle">عنوان الرساله</string>
    <string name="notify1">تنبيه بخصوص طلبك</string>
    <string name="notifydata">الاربعاء 15/6/2018</string>
    <string name="aboutapp">هذا التطبيق مهم جدا للكثير من المستشفيات حيت انه يساعد المرضى على ايجاد فصيلة الدم الخاصه بهم بسهوله ويساعد على سرعة ايجاد الفصائل المختلفه وتوافره فى كثير من الاحيان ......</string>
    <string name="city">المدينه</string>
    <string name="samanod">سمنود</string>
    <string name="elmahalla">المحله</string>
    <string name="elmansoura">المنصوره</string>
    <string name="menutsamanod">منية سمنود</string>
    <string name="aga">اجا</string>
    <string name="cairo">القاهره</string>
    <string name="calender">اخر موعد للتبرع</string>
    <string name="editinfooo">تعديل البيانات</string>
    <string name="editname">احمد محمد</string>
    <string name="edit">تعديل</string>
    <string name="age">العمر</string>
    <string name="numberrequests">عدد الاكياس</string>
    <string name="hospitalname">اسم المستشفى</string>
    <string name="hospitaladdress">عنوان المستشفى</string>
    <string name="notes">ملاحظات</string>
    <string name="sendrequest">ارسال الطلب</string>
    <string name="requestblod">طلب تبرع</string>
    <string name="ahmedname">الاسم:احمد محمد</string>
    <string name="ahmedage">العمر:23</string>
    <string name="ahmedblodtype">فصيلة الدم:A+</string>
    <string name="ahmednumberrequests">عدد الاكياس:3</string>
    <string name="ahmedhospitalname">المستشفى :الخير التخصصى</string>
    <string name="ahmedhospitaladdress"> عنوان المستشفى:شارع عبد العزيز21</string>
    <string name="ahmedphonenumber">رقم الجوال :12567899</string>
    <string name="ahmedrequestblod">طلب تبرع:احمد محمد</string>
    <string name="call">اتصال</string>
    <string name="descreption">التفاصيل:                           هزا التطبيق يساعد على الحصول على الدم عند الحاجه</string>
    <string name="savepeople">الوقايه من الامراض</string>
    <string name="b">B+</string>
    <string name="a1">A+</string>
    <string name="a">A-</string>
    <string name="o">O-</string>
    <string name="patientname">اسم الحاله : احمد محمد</string>
    <string name="patienthospital">مستشفى : القصر العينى</string>
    <string name="patientcity">المدينه : المنصوره</string>
    <string name="details">التفاصيل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bagsnum">عدد الاكياس</string>


</resources>
