<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/mainicon"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/infoicon"
            android:title="@string/information" />
        <!--<item-->
            <!--android:id="@+id/nav_notificationsetting"-->
            <!--android:icon="@drawable/notificationicon"-->
            <!--android:title="@string/notificationsetting" />-->
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorits"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/reporticon"
            android:title="@string/report" />
    <item
        android:id="@+id/nav_call"
        android:icon="@drawable/callus"
        android:title="@string/callus" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/about" />
    <!--<item-->
        <!--android:id="@+id/nav_review"-->
        <!--android:icon="@drawable/staricon"-->
        <!--android:title="@string/reviewapp" />-->
    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/signupicon"
        android:title="@string/signup" />
    </group>
</menu>
