<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CreateDonationRequest_Fragment">

    <EditText
        android:id="@+id/patient_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/patient_age"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:gravity="right"
        android:hint="@string/age"
        android:inputType="datetime"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/patient_blodtype"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/blodtype"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/bagsnum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/bagsnum"
      />

    <EditText
        android:id="@+id/patient_hospitalname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hospitalname"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/patient_hospitaladdress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/location"
        android:hint="@string/hospitaladdress"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_edittext"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/governspinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_edittext"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/cityspinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <EditText
        android:id="@+id/patientphone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:gravity="right"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/patientnotes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:gravity="right"
        android:hint="@string/notes"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sendrequests"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#282e3d"
        android:text="@string/sendrequest"
        android:textColor="#fff"
        android:textSize="20dp" />


</LinearLayout>