<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bk"
    android:orientation="vertical"
    android:paddingTop="60dp"
    tools:context=".Activity.login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="80dp"
        android:gravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/phone"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edittext"
        android:hint="@string/phonenumber"
        android:gravity="right"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/password"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password"
        android:padding="10dp"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/forgetme_pic"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:layout_marginLeft="20dp"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layoutDirection="rtl"
            android:text="@string/rememberme"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:id="@+id/Sign_in"
        android:layout_marginRight="10dp"
        android:background="#5fe26c"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#4138f5"
        android:text="@string/signin"
        android:onClick="register"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="22sp"
        tools:ignore="OnClick" />

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/ProgrossLogin"

        />
</LinearLayout>